[gd_scene load_steps=17 format=2]

[ext_resource path="res://Games/Captcha/audio/84373fa0-2147-11eb-8624-7b603f8f645f.ogg" type="AudioStream" id=1]
[ext_resource path="res://Games/Captcha/Captcha.gd" type="Script" id=2]
[ext_resource path="res://Games/Captcha/assets/pug4.png" type="Texture" id=3]
[ext_resource path="res://Games/Captcha/assets/bread4.png" type="Texture" id=4]
[ext_resource path="res://Games/Captcha/assets/bread5.png" type="Texture" id=5]
[ext_resource path="res://Games/Captcha/assets/pug3.png" type="Texture" id=6]
[ext_resource path="res://Games/Captcha/assets/bread1.jpg" type="Texture" id=7]
[ext_resource path="res://Games/Captcha/assets/bread2.jpg" type="Texture" id=8]
[ext_resource path="res://Games/Captcha/assets/pug2.png" type="Texture" id=9]
[ext_resource path="res://Games/Captcha/assets/bread3.png" type="Texture" id=10]
[ext_resource path="res://Fonts/TCM_____.TTF" type="DynamicFontData" id=11]
[ext_resource path="res://Games/Captcha/assets/pug1.jpg" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.278431, 0.278431, 0.278431, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="Captcha" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -23.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
test = [ 1, 4, 5, 8 ]

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 291.0
margin_top = 11.0
margin_right = -292.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 20.0
margin_right = -300.0
margin_bottom = -100.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="GridContainer"]
margin_right = 224.0
margin_bottom = 189.0
mouse_default_cursor_shape = 3
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
flat = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button1"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/Button1"]
show_behind_parent = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GridContainer"]
margin_left = 228.0
margin_right = 452.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
flat = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/Button2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="GridContainer"]
margin_left = 456.0
margin_right = 680.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
flat = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button3"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/Button3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="GridContainer"]
margin_top = 193.0
margin_right = 224.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
flat = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button4"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/Button4"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="GridContainer"]
margin_left = 228.0
margin_top = 193.0
margin_right = 452.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
flat = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button5"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/Button5"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="GridContainer"]
margin_left = 456.0
margin_top = 193.0
margin_right = 680.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
flat = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button6"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/Button6"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="GridContainer"]
margin_top = 386.0
margin_right = 224.0
margin_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
flat = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button7"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/Button7"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="GridContainer"]
margin_left = 228.0
margin_top = 386.0
margin_right = 452.0
margin_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
flat = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button8"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/Button8"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="GridContainer"]
margin_left = 456.0
margin_top = 386.0
margin_right = 680.0
margin_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
flat = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button9"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer/Button9"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Iamnotarobot" type="CheckBox" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 57.9899
margin_top = -80.0
margin_right = 337.99
margin_bottom = -12.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "I'm not a robot!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="purebread" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 316.314
margin_top = -78.6274
margin_right = 656.314
margin_bottom = -12.6274
custom_fonts/font = SubResource( 4 )
text = "Select all images with pugs."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="GridContainer/Button1" to="." method="_on_Button_toggled" binds= [ "Button1" ]]
[connection signal="toggled" from="GridContainer/Button2" to="." method="_on_Button_toggled" binds= [ "Button2" ]]
[connection signal="toggled" from="GridContainer/Button3" to="." method="_on_Button_toggled" binds= [ "Button3" ]]
[connection signal="toggled" from="GridContainer/Button4" to="." method="_on_Button_toggled" binds= [ "Button4" ]]
[connection signal="toggled" from="GridContainer/Button5" to="." method="_on_Button_toggled" binds= [ "Button5" ]]
[connection signal="toggled" from="GridContainer/Button6" to="." method="_on_Button_toggled" binds= [ "Button6" ]]
[connection signal="toggled" from="GridContainer/Button7" to="." method="_on_Button_toggled" binds= [ "Button7" ]]
[connection signal="toggled" from="GridContainer/Button8" to="." method="_on_Button_toggled" binds= [ "Button8" ]]
[connection signal="toggled" from="GridContainer/Button9" to="." method="_on_Button_toggled" binds= [ "Button9" ]]
[connection signal="pressed" from="Iamnotarobot" to="." method="_on_Iamnotarobot_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
